nav and header complete

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </div>
         <nav>
             <ul class="nav-items-container">
-                <li>Home Page</li>
-                <li>Services</li>
-                <li>Bookings</li>
-                <li> Meet the Team</li>
+                <li><a href="#">Home Page</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Bookings</a></li>
+                <li><a href="#">Meet the Team</a></li>
             </ul>
         </nav>
     </header>
