hero complete for desktop and mobile

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         </nav>
     </header>
 
+    <main>
+        <div class="promotion">
+            <h1>Free manicure with every haircut!</h1>
+        </div>
+
+    </main>
 
 </body>
 
