grid layout complete

--- a/index.html
+++ b/index.html
@@ -28,10 +28,36 @@
     </header>
 
     <main>
-        <div class="promotion">
+        <section class="promotion">
             <h1>Free manicure with every haircut!</h1>
-        </div>
+        </section>
 
+        <section class="info-section">
+            <div class="info-container">
+                <img src="https://images.unsplash.com/photo-1607779097040-26e80aa78e66?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80"
+                    alt="manicure picture">
+                <h2>Our Services</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus fuga eveniet doloremque in. Nobis
+                    excepturi aliquam fugit tenetur provident, eos itaque aut accusantium, cum minima deserunt
+                    consequuntur in voluptas autem.</p>
+            </div>
+            <div class="info-container">
+                <img src="https://images.unsplash.com/photo-1470259078422-826894b933aa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1174&q=80"
+                    alt="hair picture">
+                <h2>Our Services</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus fuga eveniet doloremque in. Nobis
+                    excepturi aliquam fugit tenetur provident, eos itaque aut accusantium, cum minima deserunt
+                    consequuntur in voluptas autem.</p>
+            </div>
+            <div class="info-container">
+                <img src="https://images.unsplash.com/photo-1470259078422-826894b933aa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1174&q=80"
+                    alt="manicure picture">
+                <h2>Our Services</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus fuga eveniet doloremque in. Nobis
+                    excepturi aliquam fugit tenetur provident, eos itaque aut accusantium, cum minima deserunt
+                    consequuntur in voluptas autem.</p>
+            </div>
+        </section>
     </main>
 
 </body>
