info section complete

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                 <img src="https://images.unsplash.com/photo-1607779097040-26e80aa78e66?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80"
                     alt="manicure picture">
                 <h2>Our Services</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus fuga eveniet doloremque in. Nobis
+                <p>Lorem ipsum dolor sit amet lam consectetur adipisicing elit. nout Doloribus fuga eveniet doloremque
+                    in.
+                    Nobis
                     excepturi aliquam fugit tenetur provident, eos itaque aut accusantium, cum minima deserunt
                     consequuntur in voluptas autem.</p>
             </div>
@@ -50,7 +52,7 @@
                     consequuntur in voluptas autem.</p>
             </div>
             <div class="info-container">
-                <img src="https://images.unsplash.com/photo-1470259078422-826894b933aa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1174&q=80"
+                <img src="https://media.istockphoto.com/id/1268203510/photo/barbershop-workers-playing-with-tools.jpg?s=612x612&w=0&k=20&c=p_rtoIrIhqkiZMDvC98R_FUeRWLbM1D1Z1Lod_48ccI="
                     alt="manicure picture">
                 <h2>Our Services</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus fuga eveniet doloremque in. Nobis
