--- a/index.html
+++ b/index.html
@@ -42,25 +42,41 @@
                     Nobis
                     excepturi aliquam fugit tenetur provident, eos itaque aut accusantium, cum minima deserunt
                     consequuntur in voluptas autem.</p>
+                <a class='info-links' href="#">More info</a>
             </div>
             <div class="info-container">
                 <img src="https://images.unsplash.com/photo-1470259078422-826894b933aa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1174&q=80"
                     alt="hair picture">
-                <h2>Our Services</h2>
+                <h2>Book a Session</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus fuga eveniet doloremque in. Nobis
                     excepturi aliquam fugit tenetur provident, eos itaque aut accusantium, cum minima deserunt
                     consequuntur in voluptas autem.</p>
+                <a class='info-links' href="#">More info</a>
             </div>
             <div class="info-container">
                 <img src="https://media.istockphoto.com/id/1268203510/photo/barbershop-workers-playing-with-tools.jpg?s=612x612&w=0&k=20&c=p_rtoIrIhqkiZMDvC98R_FUeRWLbM1D1Z1Lod_48ccI="
                     alt="manicure picture">
-                <h2>Our Services</h2>
+                <h2>Meet the Team!</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus fuga eveniet doloremque in. Nobis
                     excepturi aliquam fugit tenetur provident, eos itaque aut accusantium, cum minima deserunt
                     consequuntur in voluptas autem.</p>
+                <a class='info-links' href="#">More info</a>
             </div>
         </section>
     </main>
+    <footer>
+        <footer class="footer-flex-container">
+            <div class="footer-left">
+                <img class='logo-img' src="./images/Artboard 19.png" alt="logo-footer">
+                <img class='logo-img' src="./images/Artboard 23.png" alt="logo-footer-text">
+            </div>
+            <div class="footer-right">
+                <div class="line-above-copyright"></div>
+                <p>© 2023 Hair Day</p>
+
+            </div>
+        </footer>
+    </footer>
 
 </body>
 
