added meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- seo meta tags -->
+    <meta name="description" content="Hair Day's landing page">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Hair Day">
+    <meta name="keywords" content="hair, salon, beauty, manicure, pedicure, haircut">
+    <!-- og meta tags -->
+    <meta property="og:title" content="Hair Day">
+    <meta property="og:description" content="Hair Day's landing page">
+    <meta property="og:image" content="./images/Artboard 19.png">
+    <meta property="og:url" content="https://www.hairday.com">
+    <meta property="og:site_name" content="Hair Day">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+
     <title>Hair Day</title>
     <link rel="icon" href="images/Artboard 19.png" type="image/png" sizes="16x16">
     <link rel="stylesheet" href="styles.css">
@@ -44,6 +58,7 @@
                     consequuntur in voluptas autem.</p>
                 <a class='info-links' href="#">More info</a>
             </div>
+
             <div class="info-container">
                 <img src="https://images.unsplash.com/photo-1470259078422-826894b933aa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1174&q=80"
                     alt="hair picture">
@@ -53,6 +68,7 @@
                     consequuntur in voluptas autem.</p>
                 <a class='info-links' href="#">More info</a>
             </div>
+
             <div class="info-container">
                 <img src="https://media.istockphoto.com/id/1268203510/photo/barbershop-workers-playing-with-tools.jpg?s=612x612&w=0&k=20&c=p_rtoIrIhqkiZMDvC98R_FUeRWLbM1D1Z1Lod_48ccI="
                     alt="manicure picture">
@@ -64,8 +80,9 @@
             </div>
         </section>
     </main>
+
     <footer>
-        <footer class="footer-flex-container">
+        <div class="footer-flex-container">
             <div class="footer-left">
                 <img class='logo-img' src="./images/Artboard 19.png" alt="logo-footer">
                 <img class='logo-img' src="./images/Artboard 23.png" alt="logo-footer-text">
@@ -73,9 +90,8 @@
             <div class="footer-right">
                 <div class="line-above-copyright"></div>
                 <p>© 2023 Hair Day</p>
-
             </div>
-        </footer>
+        </div>
     </footer>
 
 </body>
