--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <title>Hair Day</title>
     <link rel="icon" href="images/Artboard 19.png" type="image/png" sizes="16x16">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
